fix: Use :home image everywhere Until dflook releases it officially
Signed-off-by: Joost Buskermolen <joost@buskervezel.nl>

--- a/terraform-output/action.yaml
+++ b/terraform-output/action.yaml
@@ -22,7 +22,7 @@ inputs:
 
 runs:
   using: docker
-  image: ../image/Dockerfile
+  image: docker://danielflook/terraform-github-actions:home
   entrypoint: /entrypoints/output.sh
 
 branding:
