--- a/terraform-remote-state/action.yaml
+++ b/terraform-remote-state/action.yaml
@@ -19,7 +19,7 @@ inputs:
 
 runs:
   using: docker
-  image: ../image/Dockerfile
+  image: docker://danielflook/terraform-github-actions:home
   entrypoint: /entrypoints/remote-state.sh
 
 branding:
