--- a/terraform-check/action.yaml
+++ b/terraform-check/action.yaml
@@ -36,7 +36,7 @@ inputs:
 
 runs:
   using: docker
-  image: ../image/Dockerfile
+  image: docker://danielflook/terraform-github-actions:home
   entrypoint: /entrypoints/check.sh
 
 branding:
