--- a/tofu-check/action.yaml
+++ b/tofu-check/action.yaml
@@ -38,7 +38,7 @@ runs:
   env:
     OPENTOFU: true
   using: docker
-  image: ../image/Dockerfile
+  image: docker://danielflook/terraform-github-actions:home
   entrypoint: /entrypoints/check.sh
 
 branding:
