--- a/tofu-destroy-workspace/action.yaml
+++ b/tofu-destroy-workspace/action.yaml
@@ -37,7 +37,7 @@ runs:
   env:
     OPENTOFU: true
   using: docker
-  image: ../image/Dockerfile
+  image: docker://danielflook/terraform-github-actions:home
   entrypoint: /entrypoints/destroy-workspace.sh
 
 branding:
