--- a/tofu-unlock-state/action.yaml
+++ b/tofu-unlock-state/action.yaml
@@ -27,7 +27,7 @@ runs:
   env:
     OPENTOFU: true
   using: docker
-  image: ../image/Dockerfile
+  image: docker://danielflook/terraform-github-actions:home
   entrypoint: /entrypoints/unlock-state.sh
 
 branding:
