Update dflook image
Signed-off-by: Joost Buskermolen <joost@buskervezel.nl>

--- a/terraform-apply/action.yaml
+++ b/terraform-apply/action.yaml
@@ -68,7 +68,7 @@ outputs:
 
 runs:
   using: docker
-  image: docker://danielflook/terraform-github-actions:home
+  image: docker://danielflook/terraform-github-actions:fix-self-hosted
   entrypoint: /entrypoints/apply.sh
 
 branding:
