--- a/terraform-fmt-check/action.yaml
+++ b/terraform-fmt-check/action.yaml
@@ -22,7 +22,7 @@ inputs:
 
 runs:
   using: docker
-  image: docker://danielflook/terraform-github-actions:home
+  image: docker://danielflook/terraform-github-actions:fix-self-hosted
   entrypoint: /entrypoints/fmt-check.sh
 
 branding:
