--- a/tofu-remote-state/action.yaml
+++ b/tofu-remote-state/action.yaml
@@ -21,7 +21,7 @@ runs:
   env:
     OPENTOFU: true
   using: docker
-  image: docker://danielflook/terraform-github-actions:home
+  image: docker://danielflook/terraform-github-actions:fix-self-hosted
   entrypoint: /entrypoints/remote-state.sh
 
 branding:
