--- a/terraform-destroy-workspace/action.yaml
+++ b/terraform-destroy-workspace/action.yaml
@@ -35,7 +35,7 @@ inputs:
 
 runs:
   using: docker
-  image: docker://danielflook/terraform-github-actions:home
+  image: docker://danielflook/terraform-github-actions:fix-self-hosted
   entrypoint: /entrypoints/destroy-workspace.sh
 
 branding:
