--- a/terraform-new-workspace/action.yaml
+++ b/terraform-new-workspace/action.yaml
@@ -21,7 +21,7 @@ inputs:
 
 runs:
   using: docker
-  image: docker://danielflook/terraform-github-actions:home
+  image: docker://danielflook/terraform-github-actions:fix-self-hosted
   entrypoint: /entrypoints/new-workspace.sh
 
 branding:
