--- a/terraform-unlock-state/action.yaml
+++ b/terraform-unlock-state/action.yaml
@@ -25,7 +25,7 @@ inputs:
 
 runs:
   using: docker
-  image: docker://danielflook/terraform-github-actions:home
+  image: docker://danielflook/terraform-github-actions:fix-self-hosted
   entrypoint: /entrypoints/unlock-state.sh
 
 branding:
