--- a/terraform-validate/action.yaml
+++ b/terraform-validate/action.yaml
@@ -22,7 +22,7 @@ inputs:
 
 runs:
   using: docker
-  image: docker://danielflook/terraform-github-actions:home
+  image: docker://danielflook/terraform-github-actions:fix-self-hosted
   entrypoint: /entrypoints/validate.sh
 
 branding:
