--- a/tofu-apply/action.yaml
+++ b/tofu-apply/action.yaml
@@ -70,7 +70,7 @@ runs:
   env:
     OPENTOFU: true
   using: docker
-  image: docker://danielflook/terraform-github-actions:home
+  image: docker://danielflook/terraform-github-actions:fix-self-hosted
   entrypoint: /entrypoints/apply.sh
 
 branding:
