--- a/tofu-new-workspace/action.yaml
+++ b/tofu-new-workspace/action.yaml
@@ -23,7 +23,7 @@ runs:
   env:
     OPENTOFU: true
   using: docker
-  image: docker://danielflook/terraform-github-actions:home
+  image: docker://danielflook/terraform-github-actions:fix-self-hosted
   entrypoint: /entrypoints/new-workspace.sh
 
 branding:
