--- a/tofu-output/action.yaml
+++ b/tofu-output/action.yaml
@@ -24,7 +24,7 @@ runs:
   env:
     OPENTOFU: true
   using: docker
-  image: docker://danielflook/terraform-github-actions:home
+  image: docker://danielflook/terraform-github-actions:fix-self-hosted
   entrypoint: /entrypoints/output.sh
 
 branding:
