--- a/tofu-plan/action.yaml
+++ b/tofu-plan/action.yaml
@@ -74,7 +74,7 @@ runs:
   env:
     OPENTOFU: true
   using: docker
-  image: docker://danielflook/terraform-github-actions:home
+  image: docker://danielflook/terraform-github-actions:fix-self-hosted
   entrypoint: /entrypoints/plan.sh
 
 branding:
